# DCCVT

./: .gitignore  .gitmodules  2D-sdf-visualization.ipynb  DCCVT.py  DCCVT_ablation.args  DCCVT_aug17_all.args  DCCVT_batch_render.py  DCCVT_experiments.py  DCCVT_figs.args  DCCVT_figs6.args  DCCVT_figs_metrics.py  DCCVT_figs_teaser.args  DCCVT_metric_check.py  DCCVT_metrics.args  DCCVT_metrics.py  DCCVT_noDeadCode.py  DCCVT_noDeadCode_codex.py  DCCVT_noDeadCode_codex_refactor.md  DCCVT_sdf_pos_experiments.py  DCCVT_supp.args  ForwardPass.ipynb  ForwardPassUtils.py  Gradient.ipynb  Gradient_bisector.ipynb  Gradient_circlesdf.ipynb  Poisson.ipynb  README.md  SDF_from_obj.ipynb  Test_2DChamferVertex_SDFprediction.ipynb  Test_2D_Steik.ipynb  Test_3DChamferVertex_SDFprediction.ipynb  Test_3DChamferVertex_TrueSDF.ipynb  Test_3D_Steik.ipynb  Test_ChamferVertex_SDFprediction.ipynb  Test_End2End_DCCVT.ipynb  Test_End2End_DCCVT_HotSpot.ipynb  Test_End2End_DCCVT_interpolSDF.ipynb  Test_HotSpot_DCCVT.ipynb  Test_HotSpot_DCCVT_VoroLoss.ipynb  Test_InterpolationVertexDeformation_SDFprediction.ipynb  (+29 more)
DCCVT/: DCCVT.py
Resources/: deform_source_mesh_to_target_mesh.ipynb  dmtet_tutorial.ipynb  stanford-bunny.npy
accel/: CMakeLists.txt  setup.py
accel/src/: main.cpp
argfiles/: DCCVT_ablation.args  DCCVT_ablation_unconv.args  DCCVT_all_aug15.args  DCCVT_aug17_all.args  DCCVT_aug17_upsampling.args  DCCVT_figs6.args  DCCVT_figs_teaser.args  DCCVT_metrics.args  DCCVT_metrics_MT_U_MAGA.args  DCCVT_metrics_alphashape.args  DCCVT_prototype.args  DCCVT_supp.args
data/: sdf_frequency.json
dccvt/: __init__.py  alpha_shape.py  argparse_utils.py  config.py  device.py  geometry.py  io_utils.py  main.py  mesh_ops.py  model_utils.py  paths.py  pipeline.py  runner.py  runtime.py  sdf_gradients.py  training.py  upsampling.py
figures/: .gitignore  .polyscope.ini  imgui.ini
hotspots_model/: 441708_100.pth  64764_100.pth  bunny.pth  chair.pth  gargoyle.pth  gargoyle_unconverged.pth
mesh/: chair.stl
metrics_figs_scripts/: DCCVT_batch_render.py  (+5 more)
(+226 files in other folders)
